--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     const user = Telegram.WebApp.initDataUnsafe.user;
     console.log("User info:", user);
     function sendButton(buttonNumber) {
-        fetch(`http://127.0.0.1:5000/button/${buttonNumber}`, {
+        fetch(`http://localhost:8000/button/${buttonNumber}`, {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ user_id: user.id })
